Remove payment handlers for security reasons (#46)
* Delete handlers and routes

* Update swagger

* Add handlers only remove routes
